// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`leftSide renders properly 1`] = `
<nav tabindex="0" class="h-screen fixed top-0 left-0 outline-none z-10 bg-blue-700 transition-all duration-300 ease-in-out text-gray-200">
  <div class="menu-trigger absolute sm:hidden bg-blue-700"></div>
  <header class="py-8 px-2 sm:p-2 md:py-8 md:px-2 text-center bg-gray-900 bg-opacity-25 sm:relative"><img height="100" width="100" src="bar" alt="foo" class="overflow-hidden mx-auto rounded-full border-4 border-solid border-blue-300">
    <h2 class="pt-4">
      foo
    </h2>
    <p class="text-xs pt-4">
      <nuxt-link-stub to="switchLocalePath('en')" class="block transition-all duration-150 ease-linear">
        Switch language
      </nuxt-link-stub>
      <nuxt-link-stub to="switchLocalePath('fr')" class="block transition-all duration-150 ease-linear">
        Changer de langue
      </nuxt-link-stub>
    </p>
  </header>
  <ul class="py-2"></ul>
</nav>
`;

exports[`leftSide renders properly en lang 1`] = `
<nav tabindex="0" class="h-screen fixed top-0 left-0 outline-none z-10 bg-blue-700 transition-all duration-300 ease-in-out text-gray-200">
  <div class="menu-trigger absolute sm:hidden bg-blue-700"></div>
  <header class="py-8 px-2 sm:p-2 md:py-8 md:px-2 text-center bg-gray-900 bg-opacity-25 sm:relative"><img height="100" width="100" src="bar" alt="foo" class="overflow-hidden mx-auto rounded-full border-4 border-solid border-blue-300">
    <h2 class="pt-4">
      foo
    </h2>
    <p class="text-xs pt-4">
      <!---->
      <nuxt-link-stub to="switchLocalePath('fr')" class="block transition-all duration-150 ease-linear">
        Changer de langue
      </nuxt-link-stub>
    </p>
  </header>
  <ul class="py-2"></ul>
</nav>
`;

exports[`leftSide renders properly fr lang 1`] = `
<nav tabindex="0" class="h-screen fixed top-0 left-0 outline-none z-10 bg-blue-700 transition-all duration-300 ease-in-out text-gray-200">
  <div class="menu-trigger absolute sm:hidden bg-blue-700"></div>
  <header class="py-8 px-2 sm:p-2 md:py-8 md:px-2 text-center bg-gray-900 bg-opacity-25 sm:relative"><img height="100" width="100" src="bar" alt="foo" class="overflow-hidden mx-auto rounded-full border-4 border-solid border-blue-300">
    <h2 class="pt-4">
      foo
    </h2>
    <p class="text-xs pt-4">
      <nuxt-link-stub to="switchLocalePath('en')" class="block transition-all duration-150 ease-linear">
        Switch language
      </nuxt-link-stub>
      <!---->
    </p>
  </header>
  <ul class="py-2"></ul>
</nav>
`;

exports[`leftSide renders properly with props 1`] = `
<nav tabindex="0" class="h-screen fixed top-0 left-0 outline-none z-10 bg-blue-700 transition-all duration-300 ease-in-out text-gray-200">
  <div class="menu-trigger absolute sm:hidden bg-blue-700"></div>
  <header class="py-8 px-2 sm:p-2 md:py-8 md:px-2 text-center bg-gray-900 bg-opacity-25 sm:relative"><img height="100" width="100" src="bar" alt="foo" class="overflow-hidden mx-auto rounded-full border-4 border-solid border-blue-300">
    <h2 class="pt-4">
      foo
    </h2>
    <p class="text-xs pt-4">
      <nuxt-link-stub to="switchLocalePath('en')" class="block transition-all duration-150 ease-linear">
        Switch language
      </nuxt-link-stub>
      <nuxt-link-stub to="switchLocalePath('fr')" class="block transition-all duration-150 ease-linear">
        Changer de langue
      </nuxt-link-stub>
    </p>
  </header>
  <ul class="py-2">
    <li tabindex="0">
      <nuxt-link-stub to="#page1" class="link block sm:text-sm p-4 outline-none bg-no-repeat cursor-pointer transition-all duration-150 ease-linear hover:bg-gray-900 hover:bg-opacity-25">
        <component1-stub></component1-stub> <span class="ml-3 capitalize">Page 1</span>
      </nuxt-link-stub>
    </li>
    <li tabindex="0">
      <nuxt-link-stub to="#page2" class="link block sm:text-sm p-4 outline-none bg-no-repeat cursor-pointer transition-all duration-150 ease-linear hover:bg-gray-900 hover:bg-opacity-25">
        <component2-stub></component2-stub> <span class="ml-3 capitalize">Page 2</span>
      </nuxt-link-stub>
    </li>
  </ul>
</nav>
`;
